# gfolding

./: CHANGELOG.md  README.md  gfolding.cabal
app/: Main.hs
src/: gfolds.lhs  gfolds.md
