cabal-version:      2.4
name:               gfolding
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nigel Stepp
maintainer:         stepp@atistar.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Gfolds

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options: -pgmL markdown-unlit
    build-depends:    base >=4.14 && < 5, fgl, markdown-unlit
    hs-source-dirs:   src
    default-language: Haskell2010

